--- a/DisplayMotionCreatorCore/MainWindow.xaml
+++ b/DisplayMotionCreatorCore/MainWindow.xaml
@@ -4,9 +4,38 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DisplayMotionCreatorCore"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="DispCreatorWIP" Height="330" Width="600" MinHeight="330" MaxHeight="330" Background="#FFEDEDED">
+    <Grid x:Name="Main" Margin="10,10,10,10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="5*" />
+            <RowDefinition Height="1.5*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="7*" />
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock Grid.Row="0" x:Name="Title" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" 
+                   Text="MMDElectone&#xD;&#xA;テンポ画面用Motion生成器" TextAlignment="Center" FontSize="18" Grid.ColumnSpan="2"/>
+        <StackPanel Grid.Row="1" VerticalAlignment="Center" Margin="0,0,5,0" >
+            <TextBox Text="テンポを入力" FontSize="18" Height="26" Margin="0,0,0,5" ToolTip="BPMを入力してください。"/>
+            <TextBox Text="拍子を入力" FontSize="18" Height="26" Margin="0,0,0,5"
+                     ToolTip="拍子を整数で入力してください。&#xa;4分の4なら'4',4分の3なら'3'と入力"/>
+            <TextBox Text="長さを入力" FontSize="18" Height="26" Margin="0,0,0,5" ToolTip="モーションの長さを秒単位で入力してください。"/>
+            <TextBox Text="開始フレーム位置を入力" FontSize="18" Height="26" Margin="0,0,0,5" ToolTip="変更がない場合はデフォルトは0です。"/>
+            <TextBox Text="開始小節番号を入力(1以上)" FontSize="18" Height="26" Margin="0,0,0,5"
+                     ToolTip="1以上を入力してください。&#xa;変更がない場合はデフォルトは1です。"/>
+        </StackPanel>
+        <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Margin="5,0,0,0" >
+            <TextBlock FontWeight="Bold" FontSize="18" Text="bpm" HorizontalAlignment="Left" Height="26" Margin="0,0,0,5"/>
+            <TextBlock FontWeight="Bold" FontSize="18" Text="拍" HorizontalAlignment="Left" Height="26" Margin="0,0,0,5"/>
+            <TextBlock FontWeight="Bold" FontSize="18" Text="秒" HorizontalAlignment="Left" Height="26" Margin="0,0,0,5"/>
+            <TextBlock FontWeight="Bold" FontSize="18" Text="frame" HorizontalAlignment="Left" Height="26" Margin="0,0,0,5"/>
+            <TextBlock FontWeight="Bold" FontSize="18" Text="小節目" HorizontalAlignment="Left" Height="26" Margin="0,0,0,5"/>
+        </StackPanel>
+        <Button x:Name="confirm" Grid.Row="2" Grid.ColumnSpan="2" Content="実行！" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                FontSize="18" Height="35" Width="75" Margin="0,5,0,0" Click="confirm_Click"/>
+        <Button x:Name="debug" Grid.Row="2" Grid.ColumnSpan="2" Content="debug" FontSize="18" Height="35" HorizontalAlignment="Left" Width="75" Margin="0,5,0,0" VerticalAlignment="Center" Click="debug_Click"/>
 
     </Grid>
 </Window>
