--- a/DisplayMotionCreatorCore/MainWindow.xaml
+++ b/DisplayMotionCreatorCore/MainWindow.xaml
@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DisplayMotionCreatorCore"
-        Title="DispCreatorWIP" Height="330" Width="600" MinHeight="330" MaxHeight="330" Background="#FFEDEDED">
-    <Grid x:Name="Main" Margin="10,10,10,10">
+        Title="DispCreatorWIP" Height="330" Width="600" MinHeight="330" MaxHeight="330" Background="#FFEDEDED" Closing="OnClosing">
+    <Grid Margin="10,10,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="2*" />
             <RowDefinition Height="5*" />
@@ -15,15 +15,15 @@
             <ColumnDefinition Width="7*" />
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Row="0" x:Name="Title" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" 
+        <TextBlock Grid.Row="0" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" 
                    Text="MMDElectone&#xD;&#xA;テンポ画面用Motion生成器" TextAlignment="Center" FontSize="18" Grid.ColumnSpan="2"/>
         <StackPanel Grid.Row="1" VerticalAlignment="Center" Margin="0,0,5,0" >
-            <TextBox Text="テンポを入力" FontSize="18" Height="26" Margin="0,0,0,5" ToolTip="BPMを入力してください。"/>
-            <TextBox Text="拍子を入力" FontSize="18" Height="26" Margin="0,0,0,5"
+            <TextBox x:Name="inputTempo" Text="テンポを入力" FontSize="18" Height="26" Margin="0,0,0,5" ToolTip="BPMを入力してください。"/>
+            <TextBox x:Name="inputTimeSig" Text="拍子を入力" FontSize="18" Height="26" Margin="0,0,0,5"
                      ToolTip="拍子を整数で入力してください。&#xa;4分の4なら'4',4分の3なら'3'と入力"/>
-            <TextBox Text="長さを入力" FontSize="18" Height="26" Margin="0,0,0,5" ToolTip="モーションの長さを秒単位で入力してください。"/>
-            <TextBox Text="開始フレーム位置を入力" FontSize="18" Height="26" Margin="0,0,0,5" ToolTip="変更がない場合はデフォルトは0です。"/>
-            <TextBox Text="開始小節番号を入力(1以上)" FontSize="18" Height="26" Margin="0,0,0,5"
+            <TextBox x:Name="inputLength" Text="長さを入力" FontSize="18" Height="26" Margin="0,0,0,5" ToolTip="モーションの長さを秒単位で入力してください。"/>
+            <TextBox x:Name="inputStartFrame" Text="開始フレーム位置を入力" FontSize="18" Height="26" Margin="0,0,0,5" ToolTip="変更がない場合はデフォルトは0です。"/>
+            <TextBox x:Name="inputStartBar" Text="開始小節番号を入力(1以上)" FontSize="18" Height="26" Margin="0,0,0,5"
                      ToolTip="1以上を入力してください。&#xa;変更がない場合はデフォルトは1です。"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Margin="5,0,0,0" >
