--- a/DisplayMotionCreatorCore/MainWindow.xaml
+++ b/DisplayMotionCreatorCore/MainWindow.xaml
@@ -4,37 +4,37 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DisplayMotionCreatorCore"
-        Title="DisplayMotionCreator" Height="320" Width="400">
+        Title="DisplayMotionCreator" Height="330" Width="320" MinHeight="330">
     <Grid Margin="10,10,10,10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1.6*" />
-            <RowDefinition Height="4.5*" />
+            <RowDefinition Height="1.4*" />
+            <RowDefinition Height="4.8*" />
             <RowDefinition Height="1.2*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="65px"/>
+            <ColumnDefinition Width="60
+                              px"/>
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Row="0" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" 
-                   Text="MMDElectone&#xD;&#xA;テンポ画面用Motion生成器" TextAlignment="Center" FontSize="18" Grid.ColumnSpan="2"/>
+                   Text="MMDElectone&#xD;&#xA;テンポ画面用Motion生成器" TextAlignment="Center" FontSize="16" Grid.ColumnSpan="2"/>
         <StackPanel Grid.Row="1" VerticalAlignment="Center" Margin="0,0,5,0" >
-            <TextBox x:Name="inputTempo" Text="テンポを入力" FontSize="18" Height="26" Margin="0,0,0,8" ToolTip="BPMを入力してください。"/>
-            <TextBox x:Name="inputTimeSig" Text="拍子を入力" FontSize="18" Height="26" Margin="0,0,0,8"
+            <TextBox x:Name="inputTempo" Text="テンポを入力" FontSize="16" Height="28" Margin="0,0,0,8" ToolTip="BPMを入力してください。"/>
+            <TextBox x:Name="inputTimeSig" Text="拍子を入力" FontSize="16" Height="28" Margin="0,0,0,8"
                      ToolTip="拍子を整数で入力してください。&#xa;4分の4なら'4',4分の3なら'3'と入力"/>
-            <TextBox x:Name="inputLength" Text="長さを入力" FontSize="18" Height="26" Margin="0,0,0,8" ToolTip="モーションの長さを秒単位で入力してください。"/>
-            <TextBox x:Name="inputStartFrame" Text="開始フレーム位置を入力" FontSize="18" Height="26" Margin="0,0,0,8" ToolTip="変更がない場合はデフォルトは0です。"/>
-            <TextBox x:Name="inputStartBar" Text="開始小節番号を入力(1以上)" FontSize="18" Height="26"
-                     ToolTip="1以上を入力してください。&#xa;変更がない場合はデフォルトは1です。"/>
+            <TextBox x:Name="inputLength" Text="長さを入力" FontSize="16" Height="28" Margin="0,0,0,8" ToolTip="モーションの長さを秒単位で入力してください。"/>
+            <TextBox x:Name="inputStartFrame" Text="開始フレーム位置を入力" FontSize="16" Height="28" Margin="0,0,0,8" ToolTip="変更がない場合はデフォルトは0です。"/>
+            <TextBox x:Name="inputStartBar" Text="開始小節番号を入力(1以上)" FontSize="16" Height="28"
+                     ToolTip="1以上を入力してください。&#xa;変更がない場合はデフォルトは1です。" Margin="0,0,0,8"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Margin="5,0,0,0" >
-            <TextBlock FontWeight="Bold" FontSize="18" Text="bpm" HorizontalAlignment="Left" Height="26" Margin="0,0,0,8"/>
-            <TextBlock FontWeight="Bold" FontSize="18" Text="拍" HorizontalAlignment="Left" Height="26" Margin="0,0,0,8"/>
-            <TextBlock FontWeight="Bold" FontSize="18" Text="秒" HorizontalAlignment="Left" Height="26" Margin="0,0,0,8"/>
-            <TextBlock FontWeight="Bold" FontSize="18" Text="frame" HorizontalAlignment="Left" Height="26" Margin="0,0,0,8"/>
-            <TextBlock FontWeight="Bold" FontSize="18" Text="小節目" HorizontalAlignment="Left" Height="26"/>
+            <TextBlock FontSize="16" Text="bpm" HorizontalAlignment="Left" Height="28" Margin="0,0,0,8"/>
+            <TextBlock FontSize="16" Text="拍" HorizontalAlignment="Left" Height="28" Margin="0,0,0,8"/>
+            <TextBlock FontSize="16" Text="秒" HorizontalAlignment="Left" Height="28" Margin="0,0,0,8"/>
+            <TextBlock FontSize="16" Text="frame" HorizontalAlignment="Left" Height="28" Margin="0,0,0,8"/>
+            <TextBlock FontSize="16" Text="小節目" HorizontalAlignment="Left" Height="28" Margin="0,0,0,8"/>
         </StackPanel>
-        <Button x:Name="confirm" Grid.Row="2" Grid.ColumnSpan="2" Content="実行！" HorizontalAlignment="Center" VerticalAlignment="Center" 
+        <Button x:Name="confirm" Grid.Row="2" Grid.ColumnSpan="2" Content="実行" HorizontalAlignment="Center" VerticalAlignment="Center" 
                 FontSize="18" Height="35" Width="75" Margin="0,5,0,0" Click="confirm_Click"/>
-
     </Grid>
 </Window>
